background-clip:text with a transform render incorrectly
Categories
(Core :: Graphics: WebRender, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox90 | --- | wontfix |
firefox91 | --- | fixed |
firefox92 | --- | fixed |
People
(Reporter: mayankleoboy1, Assigned: mattwoodrow)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
48 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
open https://codepen.io/mandymichael/pen/wpYQKx
ER : Correct rendering
AR: broken rendering
2021-07-17T15:57:47.488000: INFO : platform_version: 90.0a1
2021-07-17T15:58:12.171000: INFO : Narrowed integration regression window from [3557d61e, 3d958d70] (3 builds) to [3557d61e, 411d3031] (2 builds) (~1 steps left)
2021-07-17T15:58:12.183000: DEBUG : Starting merge handling...
2021-07-17T15:58:12.183000: DEBUG : Using url: https://hg.mozilla.org/integration/autoland/json-pushes?changeset=411d3031b1b4c0f8b9ff3009ceb21ba4cfdc601e&full=1
2021-07-17T15:58:12.183000: DEBUG : redo: attempt 1/3
2021-07-17T15:58:12.183000: DEBUG : redo: retry: calling _default_get with args: ('https://hg.mozilla.org/integration/autoland/json-pushes?changeset=411d3031b1b4c0f8b9ff3009ceb21ba4cfdc601e&full=1',), kwargs: {}, attempt #1
2021-07-17T15:58:12.186000: DEBUG : urllib3.connectionpool: Resetting dropped connection: hg.mozilla.org
2021-07-17T15:58:13.682000: DEBUG : urllib3.connectionpool: https://hg.mozilla.org:443 "GET /integration/autoland/json-pushes?changeset=411d3031b1b4c0f8b9ff3009ceb21ba4cfdc601e&full=1 HTTP/1.1" 200 None
2021-07-17T15:58:13.729000: DEBUG : Found commit message:
Bug 1540737 - Don't use PushLayerWithBlend since it's not implemented by all backend. r=jrmuizel
Differential Revision: https://phabricator.services.mozilla.com/D115432
2021-07-17T15:58:13.729000: DEBUG : Did not find a branch, checking all integration branches
2021-07-17T15:58:13.729000: INFO : The bisection is done.
2021-07-17T15:58:13.729000: INFO : Stopped
Comment 1•4 years ago
|
||
Set release status flags based on info from the regressing bug 1540737
Comment 2•4 years ago
|
||
Matt, it seems that bug 1540737 caused this, could you have a look please? Thanks
![]() |
||
Updated•4 years ago
|
Assignee | ||
Updated•4 years ago
|
Assignee | ||
Comment 4•4 years ago
|
||
Updated•4 years ago
|
Assignee | ||
Updated•4 years ago
|
Comment 8•4 years ago
|
||
bugherder |
Comment 9•4 years ago
|
||
This seems to be picking up a number of dupes. Is this something we can safely uplift to 91 before RC next week? If so, please nominate.
Assignee | ||
Comment 10•4 years ago
|
||
Comment on attachment 9232760 [details]
Bug 1720995 - Don't apply the transform when painting a background-clip:text mask. r?miko
Beta/Release Uplift Approval Request
- User impact if declined: background-clip:text + transform renders incorrectly.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky):
- String changes made/needed:
Comment 11•4 years ago
|
||
Comment on attachment 9232760 [details]
Bug 1720995 - Don't apply the transform when painting a background-clip:text mask. r?miko
approved for 91 rc1
Comment 12•4 years ago
|
||
bugherder uplift |
Updated•4 years ago
|
Description
•