Bug 1720995 - Don't apply the transform when painting a background-clip:text mask. r=miko

Differential Revision: https://phabricator.services.mozilla.com/D120688